--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="s-sobre">
         <div class="sobre-img" data-anime="left">
             <div class="elipse">
-              <!-- <img id="teste" class="img-perfil" src="img/perfil-elipse.jpg">--> 
+              <img id="teste" class="img-perfil" src="img/perfil-elipse.jpg">
             </div>
         </div>
         <div class="sobre-texto" data-anime="right">
@@ -163,7 +163,7 @@
                     +55 13 98165-1345</a>
             </div>
             <div class="redes-item" onclick="copiaremail()" title="Clique para copiar !!">
-                <a><i class="fa fa-envelope" id="mail"></i>
+                <a id="mail-text"><i class="fa fa-envelope" id="mail"></i>
                     marcelodev2002@gmail.com</a>
             </div>
             <div class="redes-item">
@@ -182,11 +182,11 @@
                 <div class="ponto-titulo-contato"></div>
                 Entre em contato comigo:
             </div>
-            <form action="">
-                <input type="text" placeholder="Nome" required maxlength="50"><br>
-                <input type="email" placeholder="seuemail@exemplo.com" required maxlength="70"><br>
-                <textarea name="" id="" cols="30" rows="5" placeholder="Digite sua mensagem..." required
-                    maxlength="400"></textarea><br>
+            <form action="https://formsubmit.co/2632400088c9359f67007979c66a1aee" method="POST">
+                <input type="text" placeholder="Nome" required maxlength="50" name="name"><br>
+                <input type="email" placeholder="seuemail@exemplo.com" required maxlength="70" name="email"><br>
+                <textarea cols="30" rows="5" placeholder="Digite sua mensagem..." required
+                    maxlength="400" name="message"></textarea><br>
                 <button type="submit" id="formacao">Enviar</button>
             </form>
         </div>
