--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
             <p> Sempre gostei de tecnologia e como ela pode facilitar nossa vida, por isso decidi estudar mais sobre o
                 assunto e ingressar nessa carreira. <br>
-                Curto a liberdade de ter uma ideia e poder botar em prática, criar e fazer funcionar, que a programação
+                Curto a liberdade de ter uma ideia e poder por em prática, criar e fazer funcionar, que a programação
                 nos dá.</p>
 
             <div class="s-titulo">
@@ -111,7 +111,7 @@
                 Informação. <br>
                 Proativo, busco primeira oportunidade
                 na área de desenvolvimento para evoluir ainda mais
-                minhas habilidades</p>
+                minhas habilidades.</p>
             <div id="projetos"></div>
         </div>
     </div>
