--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
 </head>
 
 <body>
+    <div id="preloadteste">
+        <img src="img/caixa_eletronico.gif">
+        <img src="img/crud_container.gif">
+        <img src="img/etiquetas.gif">
+        <img src="img/gpi.gif">
+        <img src="img/parimpar.gif">
+    </div>
+    
     <div class="nav" id="nav">
         <div class="nav-horizontal">
             <div class="nav-item">
@@ -99,7 +107,7 @@
             </div>
             <p> Sempre gostei de tecnologia e como ela pode facilitar nossa vida, por isso decidi estudar mais sobre o
                 assunto e ingressar nessa carreira. <br>
-                Curto a liberdade de ter uma ideia e poder por em prática, criar e fazer funcionar, que a programação
+                Curto a liberdade de ter uma ideia e poder botar em prática, criar e fazer funcionar, que a programação
                 nos dá.</p>
 
             <div class="s-titulo">
@@ -112,7 +120,7 @@
                 Informação. <br>
                 Proativo, busco primeira oportunidade
                 na área de desenvolvimento para evoluir ainda mais
-                minhas habilidades.</p>
+                minhas habilidades</p>
             <div id="projetos"></div>
         </div>
     </div>
