--- a/index.html
+++ b/index.html
@@ -26,15 +26,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
-<body>
-    <div id="preloadteste">
-        <img src="img/caixa_eletronico.gif">
-        <img src="img/crud_container.gif">
-        <img src="img/etiquetas.gif">
-        <img src="img/gpi.gif">
-        <img src="img/parimpar.gif">
-    </div>
-    
+<body>   
     <div class="nav" id="nav">
         <div class="nav-horizontal">
             <div class="nav-item">
@@ -280,6 +272,21 @@
             <b>“ </b>O sucesso é apenas disciplina praticada todos os dias<b> ”</b>
         </div>
 
+    </div>
+    <div id="preloadteste"> <!--div que estara fora da tela, ja renderizando as imagens do carousel-->
+        <img src="img/caixa_eletronico.gif">
+        <img src="img/crud_container.gif">
+        <img src="img/etiquetas.gif">
+        <img src="img/gpi.gif">
+        <img src="img/parimpar.gif">
+        <img src="img/tec/csharp.png">
+        <img src="img/tec/css.png">
+        <img src="img/tec/html.png">
+        <img src="img/tec/js.png">
+        <img src="img/tec/mysql.png">
+        <img src="img/tec/node.png">
+        <img src="img/tec/oracle.png">
+        <img src="img/tec/react.png">
     </div>
 
     <script src="script/carousel.js"></script>
