--- a/index.html
+++ b/index.html
@@ -99,8 +99,7 @@
             </div>
             <p> Sempre gostei de tecnologia e como ela pode facilitar nossa vida, por isso decidi estudar mais sobre o
                 assunto e ingressar nessa carreira. <br>
-                Curto a liberdade de ter uma ideia e poder botar em prática, criar e fazer funcionar, que a programação
-                nos dá.</p>
+                Curto a liberdade de poder por em prática uma ideia e entender como funciona por baixo dos panos.</p>
 
             <div class="s-titulo">
                 <div class="ponto-titulo-sobre"></div>
@@ -110,8 +109,7 @@
                 Formado técnico em desenvolvimento de sistemas,
                 atualmente cursando superior em Sistemas de
                 Informação. <br>
-                Proativo, busco primeira oportunidade
-                na área de desenvolvimento para evoluir ainda mais
+                Proativo, busco oportunidade para evoluir ainda mais
                 minhas habilidades</p>
             <div id="projetos"></div>
         </div>
