--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             </div>
             <p> Sempre gostei de tecnologia e como ela pode facilitar nossa vida, por isso decidi estudar mais sobre o
                 assunto e ingressar nessa carreira. <br>
-                Curto a liberdade de poder por em prática uma ideia e entender como funciona por baixo dos panos.</p>
+                Curto a liberdade de poder pôr em prática uma ideia e entender como funciona por baixo dos panos.</p>
 
             <div class="s-titulo">
                 <div class="ponto-titulo-sobre"></div>
@@ -110,7 +110,7 @@
                 atualmente cursando superior em Sistemas de
                 Informação. <br>
                 Proativo, busco oportunidade para evoluir ainda mais
-                minhas habilidades</p>
+                minhas habilidades.</p>
             <div id="projetos"></div>
         </div>
     </div>
