--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 <h1 class="experiencia-titulo">Experiência Profissional</h1>
                 <div class="experiencia-item">
                     <div class="experiencia-item-titulo">RODRIMAR S/A - TERMINAIS PORTUÁRIOS E ARM. GERAIS</div>
-                    <div class="experiencia-item-curso">Estagiário de TI (infraestrutura)</div>
+                    <div class="experiencia-item-curso">Estagiário de TI (suporte e infra.)</div>
                     <div class="experiencia-item-periodo">03/2022 - atualmente</div>
                     <div class="experiencia-item-descricao">
                         Atender chamados, suporte ao Windows. Formatação,
