--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="style/projetos.css">
     <link rel="stylesheet" href="style/navbar.css">
     <link rel="stylesheet" href="style/index-responsive.css">
-    <link rel="icon" href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/81/male-technologist-type-4_1f468-1f3fd-200d-1f4bb.png">
+    <link rel="icon"
+        href="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/160/apple/81/male-technologist-type-4_1f468-1f3fd-200d-1f4bb.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -25,9 +26,11 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
 </head>
 
-<body> 
+<body>
     <div class="nav" id="nav">
         <div class="nav-horizontal">
             <div class="nav-item">
@@ -73,8 +76,10 @@
         <div class="inicio-txt" data-anime="top">
             <div class="inicio-titulo">Marcelo Aguiar</div>
             <div class="inicio-subtitulo">
-                <span id="sobre">
-                    < </span>desenvolvedor FullStack /<span>></span>
+                <span class="bold">
+                    < </span>
+                        desenvolvedor <span id="typewriter">FullStack</span>
+                        /<span class="bold">></span>
 
             </div>
         </div>
@@ -90,7 +95,7 @@
     <div class="s-sobre">
         <div class="sobre-img" data-anime="left">
             <div class="elipse">
-              <img id="teste" class="img-perfil" src="img/perfil-elipse.jpg">
+                <img id="teste" class="img-perfil" src="img/perfil-elipse.jpg">
             </div>
         </div>
         <div class="sobre-texto" data-anime="right">
@@ -119,7 +124,26 @@
         <div class="projetos-titulo">
             <div>Projetos</div>
         </div>
+        <div class="destaque"><!--https://codepen.io/markmiro/pen/wbqMPa -->
 
+            <div class="card-box">
+                <div class="card" id="c1">
+                    <div class="glow"></div>
+                </div>
+                <div class="card" id="c2">
+                    <div class="glow"></div>
+                </div>
+            </div>
+            <div class="desc">
+                <div class="desc-title">Operação Granel</div>
+                <div class="desc-txt">O sistema Registra todos os dados da Operação, desde o cadastro do navio até cada
+                    caminhão que carregou, destino, quantidade, data e horário...etc.
+                    <br>
+                    Criei um destaque no meu portfólio onde eu explico com mais detalhes cada funcionalidade do sistema
+                </div>
+                <div class="desc-tecs">Operação Granel</div>
+            </div>
+        </div>
         <div class="projetos-carousel">
             <div id="leftItem" class="item-geral"></div>
             <div id="leftPrev" class="item-geral"></div>
@@ -186,8 +210,8 @@
             <form action="https://formsubmit.co/2632400088c9359f67007979c66a1aee" method="POST">
                 <input type="text" placeholder="Nome" required maxlength="50" name="name"><br>
                 <input type="email" placeholder="seuemail@exemplo.com" required maxlength="70" name="email"><br>
-                <textarea cols="30" rows="5" placeholder="Digite sua mensagem..." required
-                    maxlength="400" name="message"></textarea><br>
+                <textarea cols="30" rows="5" placeholder="Digite sua mensagem..." required maxlength="400"
+                    name="message"></textarea><br>
                 <button type="submit" id="formacao">Enviar</button>
             </form>
         </div>
@@ -289,7 +313,7 @@
     </div>
 
     <script src="script/carousel.js"></script>
-    <script src="script/email.js"></script>
+    <script src="script/index.js"></script>
     <script src="script/scroll-animation.js"></script>
     <script src="script/navbar.js"></script>
 </body>
