--- a/index.html
+++ b/index.html
@@ -135,13 +135,27 @@
                 </div>
             </div>
             <div class="desc">
-                <div class="desc-title">Operação Granel</div>
-                <div class="desc-txt">O sistema Registra todos os dados da Operação, desde o cadastro do navio até cada
-                    caminhão que carregou, destino, quantidade, data e horário...etc.
-                    <br>
-                    Criei um destaque no meu portfólio onde eu explico com mais detalhes cada funcionalidade do sistema
+                <div class="desc-title">Operação Granel </div>
+                <div class="desc-subtitle">Sistema de Gestão Portuária (Granéis Sólidos)</div>
+                <div class="desc-txt">
+                    Registra e controla todos os dados da Operação:
+                    Navio, DI/Bl, Caminhões, carregamentos, berço, cargas, clientes, etc. Com a finalidade de que gerar
+                    resumos e relatórios, e também identificar possíveis erros. <br>
+
+                    - Operador diretamente na Moega consegue adicionar em tempo real cada carregamento através do
+                    dashboard, iniciar paralisações.<br>
+                    - Sistema de 3 pesagens: tara, carregamento e bruto.<br>
+                    - Adição de paralisações com data, hora e motivo.<br>
+                    - Registro do colaborador que realizar cada procedimento.<br>
+                    - Controle em tempo real da quantidade descarregada em relação ao que foi declarado em cada DI ou
+                    Bl.<br>
+                    -Integração com a Mic Sistemas para emissão de Nota Fiscal Eletrônica.
                 </div>
-                <div class="desc-tecs">Operação Granel</div>
+                <div class="desc-tecs">
+                    <img src="./img/tec/react.png">
+                    <img src="./img/tec/node.png">
+                    <img src="./img/tec/mysql.png">
+                </div>
             </div>
         </div>
         <div class="projetos-carousel">
