--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <link rel="manifest" href="/manifest.json">
+
 </head>
 
 <body>
